# agent-dev-tool

./: .gitignore  README.md  SETUP.md  mcp-config.json  pyproject.toml
docs/: ai-agent-guide.md  human-guide.md  mcp-setup.md
docs/architecture/: data-layer.md  security-audit.md
src/ai_knowledge/: __init__.py  cli.py  llm.py  scaffold.py  skill_executor.py  store.py
src/ai_knowledge/mcp/: __init__.py  server.py
src/ai_knowledge/server/: __init__.py  app.py  audit.py  auth.py  config.py  dashboard.py  middleware.py  orchestrator.py  ports.py  process_discovery.py  processes.py  scrubber.py  streaming.py  vault.py
src/ai_knowledge/server/agents/: __init__.py  manager.py
src/ai_knowledge/server/channels/: __init__.py  telegram.py
src/ai_knowledge/server/db/: __init__.py  connection.py  models.py  repositories.py
src/ai_knowledge/server/queue/: __init__.py  tasks.py
src/ai_knowledge/tools/: __init__.py  registry.py
